Orchestration/k8s/rps-site-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rps-site
  labels:
    name: rps-site
