Orchestration/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-services
  namespace: rps-site
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-cluster-ip
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-cluster-ip
                port:
                  number: 80
